editors/tree-sitter-pika/grammar.js
    source_file: $ => statements($, $._statement),

    // ----- Statements --------------------------------------------------------------------------

    _statement: $ => choice($.block, $._command),

    block: $ => seq('{', statements($, $._statement), '}'),

    variable_declaration: $ => seq(
      field('kind', choice(':local', ':const', ':global')),
      field('name', $.identifier),
      optional(seq(imm(':'), field('type', $._type))),
      optional(field('value', $._atom)),
    ),

    set_statement: $ => seq(
      ':set',
      field('target', choice($.identifier, $.parenthesized_expression)),
      field('value', $._atom),
    ),

    if_statement: $ => prec.right(seq(
      ':if',
      field('condition', $.parenthesized_expression),
      'do', imm('='), field('body', $.block),
      optional(seq('else', imm('='), field('alternative', choice($.block, $.if_statement)))),
    )),

    while_statement: $ => seq(
      ':while',
      field('condition', $.parenthesized_expression),
      'do', imm('='), field('body', $.block),
    ),

    do_while_statement: $ => seq(
      ':do',
      field('body', $.block),
      'while', imm('='), field('condition', $.parenthesized_expression),
    ),

    for_statement: $ => seq(
      ':for',
      field('variable', $.identifier),
      repeat1(choice(
        seq('from', imm('='), field('start', $._atom)),
        seq('to', imm('='), field('end', $._atom)),
        seq('until', imm('='), field('end', $._atom)),
        seq('step', imm('='), field('step', $._atom)),
      )),
      'do', imm('='), field('body', $.block),
    ),

    foreach_statement: $ => seq(
      ':foreach',
      optional('mut'),
      field('variable', $.identifier),
      optional(seq(',', field('variable', $.identifier))),
      'in', imm('='), field('collection', $._atom),
      'do', imm('='), field('body', $.block),
    ),

    onerror_statement: $ => seq(
      ':onerror',
      field('name', $.identifier),
      'in', imm('='), field('body', $.block),
      'do', imm('='), field('handler', $.block),
    ),

    unsafe_block: $ => seq(':unsafe', field('body', $.block)),

    // ----- Calls -------------------------------------------------------------------------------

    // A command that is not a built-in form: `:name args`, `/path args`, `$value args`,
    // `Type->member args`, or `[command]->member args`.
    call: $ => callRule($, $._head_atom),

    // Inside `[ ]` and `$[ ]`, any atom can be the head, including a collection literal; at the
    // start of a statement, `{` always starts a block.
    _bracketed_command: $ => choice($._form, alias($._bracketed_call, $.call)),

    named_argument: $ => seq(
      field('name', alias($._argument_name, $.argument_name)),
      imm('='),
      field('value', $._atom),
    ),

    // ----- Declarations ------------------------------------------------------------------------

    // `:fn name<T> params -> Type raises do={...}`. The name is absent for anonymous functions
    // (`[:fn x:i64 -> i64 do={...}]`), and the body for signatures in traits and `:extern`.
    function_declaration: $ => prec.right(seq(
      ':fn',
      optional(seq(
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
      )),
      repeat(field('parameter', $.parameter)),
      optional(seq('->', field('return_type', $._type))),
      optional('raises'),
      optional(seq('do', imm('='), field('body', $.block))),
    )),

    parameter: $ => choice(
      seq(optional(field('convention', $.convention)), $.self),
      seq(
        optional(field('convention', $.convention)),
        field('name', $.identifier),
        imm(':'),
        field('type', $._type),
        optional(seq(imm('='), field('default', $._atom))),
      ),
    ),

    convention: _ => choice('mut', 'owned'),

    self: _ => 'self',

    struct_declaration: $ => seq(
      ':struct',
      typeDeclarationHeader($),
      field('body', $.struct_body),
    ),

    struct_body: $ => seq(
      '{',
      statements($, choice($.field_declaration, $.function_declaration)),
      '}',
    ),

    field_declaration: $ => seq(
      field('name', $.identifier),
      imm(':'),
      field('type', $._type),
      optional(seq(imm('='), field('default', $._atom))),
    ),

    enum_declaration: $ => seq(
      ':enum',
      typeDeclarationHeader($),
      field('body', $.enum_body),
    ),

    enum_body: $ => seq(
      '{',
      statements($, choice($.variant_declaration, $.function_declaration)),
      '}',
    ),

    variant_declaration: $ => seq(
      field('name', $.identifier),
      repeat(field('field', $.field_declaration)),
    ),

    trait_declaration: $ => seq(
      ':trait',
      typeDeclarationHeader($),
      field('body', $.function_list),
    ),

    // `:impl<T> Type impl=Trait { ... }`, reserved for trait extensions.
    impl_declaration: $ => seq(
      ':impl',
      optional(field('type_parameters', $.type_parameters)),
      field('type', $._type),
      optional(seq('impl', imm('='), field('traits', $.trait_list))),
      field('body', $.function_list),
    ),

    function_list: $ => seq('{', statements($, $.function_declaration), '}'),

    trait_list: $ => seq($._type, repeat(seq(',', $._type))),

    use_declaration: $ => seq(
      ':use',
      field('path', $.path),
      optional(seq('as', imm('='), field('alias', $.identifier))),
    ),

    extern_declaration: $ => seq(
      ':extern',
      'lib', imm('='), field('library', $._atom),
      field('body', $.function_list),
    ),

    test_declaration: $ => seq(
      ':test',
      field('name', $.string),
      'do', imm('='), field('body', $.block),
    ),

    // ----- Atoms and expressions ---------------------------------------------------------------

    // An atom: a command argument, or an operand inside an expression (section 4.1).
    _atom: $ => choice($._primary, $.collection_literal, $.member_expression),

    // The atoms that can start a statement: every atom except a collection literal, which
    // would be a block there.
    _head_atom: $ => choice($._primary, alias($._head_member_expression, $.member_expression)),

    _type_head: $ => choice(alias($.identifier, $.type_identifier), $.self_type),

    member_expression: $ => memberRule($, choice($._atom, $._type_head)),

    command_substitution: $ => seq('[', $._bracketed_command, ']'),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      // Tuples are reserved; the reference parser reports them.
      repeat(seq(',', $._expression)),
      ')',
    ),

    _expression: $ => choice(
      $._atom,
      $.unary_expression,
      $.binary_expression,
      $.cast_expression,
    ),

    binary_expression: $ => {
      const table = [
        [PREC.or, choice('or', '||')],
        [PREC.and, choice('and', '&&')],
        [PREC.comparison, choice('=', '!=', '<', '<=', '>', '>=', 'in')],
        [PREC.concat, '.'],
        [PREC.bit_or, '|'],
        [PREC.bit_xor, '^'],
        [PREC.bit_and, '&'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];
      return choice(...table.map(([precedence, operator]) => prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    collection_literal: $ => seq('{', statements($, $._element), '}'),

    // `Point{x=1.0; y=2.0}`, `List<i64>{}`, `/geo/Point{...}`
    typed_literal: $ => seq(
      field('type', choice($._type_head, $.path, $.generic_type)),
      imm('{'),
      statements($, $._element),
      '}',
    ),

    _element: $ => choice($._atom, $.map_entry, $.field_initializer),

    field_initializer: $ => seq(
      field('name', alias($._argument_name, $.identifier)),
      imm('='),
      field('value', $._atom),
    ),

    // `/std/math/sqrt`: every `/` and name are joined.
    path: $ => seq(
      '/',
      alias(imm(IDENTIFIER), $.identifier),
      repeat(seq(imm('/'), alias(imm(IDENTIFIER), $.identifier))),
    ),

    variable: _ => /\$[A-Za-z_][A-Za-z0-9_]*/,

    // ----- Literals ----------------------------------------------------------------------------

    integer: _ => token(seq(optional('-'), choice(
      /[0-9][0-9_]*/,
      /0x[0-9A-Fa-f_]+/,
      /0o[0-7_]+/,
      /0b[01_]+/,
    ))),

    float: _ => token(seq(optional('-'), choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
    ))),

    // `500ms`, `1m30s`, `1d12h`. Like the reference lexer, everything after the first unit that
    // could continue a name belongs to the literal.
    duration: _ => token(seq(optional('-'), /[0-9][0-9_]*(ns|us|ms|[wdhms])[0-9A-Za-z_]*/)),

    char: _ => token(seq(
      '\'',
      choice(
        /[^'\\\r\n]/,
        /\\u\{[0-9A-Fa-f]*\}/,
        /\\x[0-9A-Fa-f]{2}/,
        /\\[^\r\n]/,
      ),
      '\'',
    )),

    boolean: _ => choice('true', 'false'),

    none: _ => 'none',

    string: $ => seq(
      '"',
      repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
      '"',
    ),

    interpolation: $ => choice(
      $.variable,
      seq('$(', $._expression, ')'),
      seq('$[', $._bracketed_command, ']'),
    ),

    // ----- Types -------------------------------------------------------------------------------

    _type: $ => choice(
      alias($.identifier, $.type_identifier),
      $.self_type,
      $.path,
      $.generic_type,
      $.option_type,
      $.function_type,
    ),

    self_type: _ => 'Self',

    generic_type: $ => seq(
      field('name', choice(alias($.identifier, $.type_identifier), $.self_type, $.path)),
      field('type_arguments', $.type_arguments),
    ),

    // A `<` joined to a name always starts type arguments (section 3.3).
    type_arguments: $ => seq(
      imm(prec(1, '<')),
      $._type,
      repeat(seq(',', $._type)),
      '>',
    ),

    option_type: $ => seq($._type, imm('?')),

    // `fn(A, B) -> R raises`. A `->` or `raises` after a function type belongs to it.
    function_type: $ => prec.right(seq(
      'fn',
      '(',
      optional(seq($._type, repeat(seq(',', $._type)))),
      ')',
      optional(seq('->', field('return_type', $._type))),
      optional('raises'),
    )),

    type_parameters: $ => seq(
      imm(prec(1, '<')),
      $.type_parameter,
      repeat(seq(',', $.type_parameter)),
      '>',
    ),

    type_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('bound', $._type), repeat(seq('+', field('bound', $._type))))),
    ),

    // ----- Patterns ----------------------------------------------------------------------------

    identifier: _ => IDENTIFIER,

    command_name: _ => /:[A-Za-z_][A-Za-z0-9_]*/,
